EDIT urls for Day 1 files

--- a/ML_Day1_2.ipynb
+++ b/ML_Day1_2.ipynb
@@ -62,11 +62,11 @@
     "# 왼쪽창에 폴더 아이콘 클릭 후 csv 파일들을 업로드.\n",
     "\n",
     "oecd_url = 'https://raw.githubusercontent.com/SLCFLAB/Fintech2023/main/data/oecd_bli_2015.csv'\n",
-    "oecd_bli = pd.read_csv(oecd_url, header=None, thousands=',') # OECD 국가들의 삶의 만족도\n",
+    "oecd_bli = pd.read_csv(oecd_url, thousands=',') # OECD 국가들의 삶의 만족도\n",
     "\n",
     "# 1000단위수 , 없애고 불러오기.\n",
     "gdp_url = 'https://raw.githubusercontent.com/SLCFLAB/Fintech2023/main/data/gdp_per_capita.csv'\n",
-    "gdp_per_capita = pd.read_csv(gdp_url, header=None, thousands=',',delimiter='\\t',\n",
+    "gdp_per_capita = pd.read_csv(gdp_url, thousands=',',delimiter='\\t',\n",
     "                             encoding='latin1', na_values=\"n/a\") #IMF의 1인당 GDP데이터\n",
     "                             # 구분자 delimiter='\\t' tab\n",
     "                             # encoding은 latin1으로, 불러오려는 csv의 인코딩 설정.\n",
@@ -5259,8 +5259,8 @@
     }
    ],
    "source": [
-    "housing_url = 'https://raw.githubusercontent.com/SLCFLAB/Math4DS/main/data/housing.csv'\n",
-    "housing = pd.read_csv(housing_url, header=None)\n",
+    "housing_url = 'https://raw.githubusercontent.com/SLCFLAB/Fintech2023/main/data/housing.csv'\n",
+    "housing = pd.read_csv(housing_url)\n",
     "housing.head()"
    ]
   },
