--- a/ML_Day1_3.ipynb
+++ b/ML_Day1_3.ipynb
@@ -194,8 +194,8 @@
     }
    ],
    "source": [
-    "housing_url = 'https://raw.githubusercontent.com/SLCFLAB/Math4DS/main/data/housing.csv'\n",
-    "housing = pd.read_csv(housing_url, header=None)\n",
+    "housing_url = 'https://raw.githubusercontent.com/SLCFLAB/Fintech2023/main/data/housing.csv'\n",
+    "housing = pd.read_csv(housing_url)\n",
     "housing.head()"
    ]
   },
@@ -1461,7 +1461,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5983867346082913"
+       "0.6067042983155911"
       ]
      },
      "execution_count": 30,
@@ -1501,8 +1501,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.37220858, -0.38700458, -0.3740449 , -0.34309709, -0.37545608,\n",
-       "       -0.34206361, -0.33371908, -0.40336803, -0.35465916, -0.38288781])"
+       "array([-0.36650301, -0.3805884 , -0.3686155 , -0.35515224, -0.37865505,\n",
+       "       -0.34658355, -0.36009467, -0.36412286, -0.34990381, -0.36497634])"
       ]
      },
      "execution_count": 31,
@@ -1531,8 +1531,8 @@
     {
      "data": {
       "text/plain": [
-       "array([0.61008899, 0.62209692, 0.6115921 , 0.5857449 , 0.61274471,\n",
-       "       0.58486204, 0.57768424, 0.63511261, 0.59553267, 0.61877929])"
+       "array([0.60539492, 0.61691847, 0.60713713, 0.59594651, 0.61534953,\n",
+       "       0.58871347, 0.60007889, 0.60342594, 0.59152668, 0.60413272])"
       ]
      },
      "execution_count": 32,
@@ -1560,8 +1560,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "평균: 0.6054238481519132\n",
-      "표준편차: 0.01768772930995654\n"
+      "평균: 0.6028624259470844\n",
+      "표준편차: 0.008742930449642668\n"
      ]
     }
    ],
@@ -1679,18 +1679,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.558769222195469 {'max_depth': 10, 'max_features': 2}\n",
-      "0.6544455133638059 {'max_depth': 10, 'max_features': 4}\n",
-      "0.6870380560088517 {'max_depth': 10, 'max_features': 6}\n",
-      "0.6886920293657812 {'max_depth': 10, 'max_features': 8}\n",
-      "0.5232175403760617 {'max_depth': 100, 'max_features': 2}\n",
-      "0.6107211071413617 {'max_depth': 100, 'max_features': 4}\n",
-      "0.6126612572777407 {'max_depth': 100, 'max_features': 6}\n",
-      "0.6243168766297762 {'max_depth': 100, 'max_features': 8}\n",
-      "0.5013745834384981 {'max_depth': 1000, 'max_features': 2}\n",
-      "0.6105560224537943 {'max_depth': 1000, 'max_features': 4}\n",
-      "0.6262723075117226 {'max_depth': 1000, 'max_features': 6}\n",
-      "0.6200642178531629 {'max_depth': 1000, 'max_features': 8}\n"
+      "0.5789612219265242 {'max_depth': 10, 'max_features': 2}\n",
+      "0.6623698551416188 {'max_depth': 10, 'max_features': 4}\n",
+      "0.6801769381056308 {'max_depth': 10, 'max_features': 6}\n",
+      "0.6903871147226877 {'max_depth': 10, 'max_features': 8}\n",
+      "0.5079123632277824 {'max_depth': 100, 'max_features': 2}\n",
+      "0.6185803052814445 {'max_depth': 100, 'max_features': 4}\n",
+      "0.6062150247767317 {'max_depth': 100, 'max_features': 6}\n",
+      "0.6246255082616059 {'max_depth': 100, 'max_features': 8}\n",
+      "0.5167930897671651 {'max_depth': 1000, 'max_features': 2}\n",
+      "0.5896221389315663 {'max_depth': 1000, 'max_features': 4}\n",
+      "0.6019054397379093 {'max_depth': 1000, 'max_features': 6}\n",
+      "0.6207139812802402 {'max_depth': 1000, 'max_features': 8}\n"
      ]
     }
    ],
