--- a/ML_day5.ipynb
+++ b/ML_day5.ipynb
@@ -60,6 +60,7 @@
       "source": [
         "from sklearn.decomposition import PCA\n",
         "\n",
+        "import numpy as np\n",
         "scikit_pca = PCA(n_components=2)\n",
         "X_spca = scikit_pca.fit_transform(X)\n",
         "\n",
