--- a/ML_day5.ipynb
+++ b/ML_day5.ipynb
@@ -355,7 +355,9 @@
     {
       "cell_type": "code",
       "source": [
+        "import matplotlib"
         "titles = [\"MDS\", \"Isomap\", \"t-SNE\"]\n",
+        "colors = [\"red\", \"blue\"]\n",
         "\n",
         "plt.figure(figsize=(11,4))\n",
         "\n",
@@ -363,7 +365,7 @@
         "                                     (X_reduced_mds, X_reduced_isomap, X_reduced_tsne)):\n",
         "    plt.subplot(subplot)\n",
         "    plt.title(title, fontsize=14)\n",
-        "    plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=t, cmap=plt.cm.hot)\n",
+        "    plt.scatter(X_reduced[:, 0], X_reduced[:, 1], c=y, cmap=matplotlib.colors.ListedColormap(colors))\n",
         "    plt.xlabel(\"$z_1$\", fontsize=18)\n",
         "    if subplot == 131:\n",
         "        plt.ylabel(\"$z_2$\", fontsize=18, rotation=0)\n",
