--- a/ML_day5.ipynb
+++ b/ML_day5.ipynb
@@ -355,7 +355,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib"
+        "import matplotlib\n",
         "titles = [\"MDS\", \"Isomap\", \"t-SNE\"]\n",
         "colors = [\"red\", \"blue\"]\n",
         "\n",
