--- a/ML_day1/ML_Day1_2.ipynb
+++ b/ML_day1/ML_Day1_2.ipynb
@@ -24,7 +24,7 @@
     "id": "kVVdEqg_JZB9"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/SLCFLAB/Fintech2023/blob/main/ML_Day1_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/SLCFLAB/Fintech2023/blob/main/ML_day1/ML_Day1_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -6032,7 +6032,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6046,7 +6046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
