--- a/ML_day1/ML_Day1_3.ipynb
+++ b/ML_day1/ML_Day1_3.ipynb
@@ -31,7 +31,7 @@
     "id": "1skWW5Ak0l5r"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/SLCFLAB/Fintech2023/blob/main/ML_Day1_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/SLCFLAB/Fintech2023/blob/main/ML_day1/ML_Day1_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -2325,7 +2325,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pytorch1.9.0')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2339,7 +2339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
